# python-template

./: .releaserc.yml  mkdocs.yml  pyproject.toml
docs/: README.md
docs/api/: main.md
docs/concepts/: README.md
docs/stylesheets/: colors.css
